# whack

./: README.md  TODO.serialization.md  TODO_serde.md  mxmlc.md  roadmap.md
Assets/Icon/: Icon-Metro.psd  Icon-Star.psd  Icon.psd
Assets/Logo/: Logo.psd
Notebook/: ideas.md
Notebook/mxmlc/: README.md  asdoc.md  bindable.md  codegen.md  config-constants.md  config.md  external-definitions.md  js-insertion.md  mxml-css.md  reporting-unused.md  type-safety.md  unit-testing.md
Notebook/uncategorized/: Bindable.md  CSS.md  Embedding.md  Fluent.md  IDE.md  Next.md  Prisma.md  Skin-metadata.md  Tag-components.md  Themes.md  UIComponents.md  Whack.md
Repositories/actioncore/: README.md  package-lock.json  package.json
Repositories/docs/: book.toml
Repositories/mxmlc/: Cargo.toml
Repositories/mxmlc/src/: diagnostics.rs  lib.rs  verifier.rs
Repositories/mxmlc/src/compileroptions/: compiler_options.rs
Repositories/mxmlc/src/diagnostics/: flex_diagnostic.rs  flex_diagnostic_kind.rs  flex_diagnostics_texts.rs
Repositories/mxmlc/src/verifier/: arguments.rs  array.rs  assignment_destructuring.rs  control_flow.rs  destructuring.rs  directive.rs  exp.rs  function_common.rs  object_literal.rs  statement.rs  verifier.rs
Repositories/mxmlc/todo/: asdoc.md  codegen.md  compilation-units.md  conditional-compilation.md  flex.md  memory-usage.md  unused-warning.md  verifier-guidelines.md  verifier.md
Repositories/mxmlc/todo/tree/: _PENDING.md  _forgeries.md  directives-list.md  directives.md  function-common.md  statements.md  tmp.rs  variable-bindings.md
(+42 files in other folders)
