[package]
name = "hydroperflex-mxmlc"
version = "1.0.0"
edition = "2021"
authors = ["Matheus Dias de Souza <hydroperfox@gmail.com>"]
repository = "https://github.com/hydroperflex/mxmlc"
keywords = ["actionscript", "as3", "compiler", "mxml", "css3"]
description = "MXML compiler for Flex"
license = "Apache-2.0"

[dependencies]
mxmlextrema-as3parser = "1"
mxmlextrema-mxmlcaot = "0.3"
late_format = "1"
lazy_static = "1.4.0"
maplit = "1.0.2"